add s3 to the project

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   
 
   <!-- OPTIONAL - JS Libraries -->
-  
+  <script src="/lib/d3/d3.min.js"></script>
   
   <!-- Application - Modules, etc -->
   <script src="/lib/actionapp/app-module.js"></script>
