helmet and stars working on home page

--- a/app/pages/Home/html/east.html
+++ b/app/pages/Home/html/east.html
@@ -2,7 +2,13 @@
     <div class="ui header">
       Puppet Controls
     </div>
-    <div class="ui button blue basic" pageaction="testColorChange">
+    <div class="hidden ui button blue basic" pageaction="testColorChange">
       Test Color Change
+    </div>
+    <div class="ui button blue basic" pageaction="connect">
+      Connect
+    </div>
+    <div class="ui button blue basic" pageaction="close">
+      Disonnect
     </div>
 </div>
