--- a/app/pages/Home/html/east.html
+++ b/app/pages/Home/html/east.html
@@ -8,7 +8,7 @@
     <div class="ui button blue basic" pageaction="connect">
       Connect
     </div>
-    <div class="ui button blue basic" pageaction="close">
+    <div class="ui button blue basic" pageaction="disconnect">
       Disonnect
     </div>
 </div>
