--- a/catalog/tpl/DaftPunkHome.html
+++ b/catalog/tpl/DaftPunkHome.html
@@ -1,4 +1,4 @@
-
+<div appuse="svgholder">
 	<svg width="700" height="600">
 		<circle use="volume" cx="40" cy="60" r="10"></circle>
 <g appuse="objwrap">
@@ -226,3 +226,6 @@
 		</g>
 
 	</svg>
+	
+	</div>
+	
