Pages for three types of SVG

--- a/app/pages/Home/html/Welcome.html
+++ b/app/pages/Home/html/Welcome.html
@@ -3,5 +3,6 @@
   
   <div action="openPage" page="DaftPunkHelmet" class="ui button blue">Daft Punk</div>
   <div action="openPage" page="CozyGuitar" class="ui button blue">Cozy Guitar</div>
+  <div action="openPage" page="HappyTurtle" class="ui button blue">Happy Turtle</div>
   
 </div>
