--- a/catalog/tpl/HappyTurtle.html
+++ b/catalog/tpl/HappyTurtle.html
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg
+
    xmlns:dc="http://purl.org/dc/elements/1.1/"
    xmlns:cc="http://creativecommons.org/ns#"
    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -11,6 +12,7 @@
    id="svg2"
    height="550"
    width="850"
+   viewBox="-100 -100 1700 1100"
    version="1.2"
    sodipodi:docname="happy-turtle-v3-02.svg"
    inkscape:version="0.92.3 (2405546, 2018-03-11)">
