--- a/app/pages/HappyTurtle/html/east.html
+++ b/app/pages/HappyTurtle/html/east.html
@@ -1,4 +1,15 @@
 <div class="ui segment basic slim">
-    <h1>How it works</h1>
-    <p>This page is all HTML</p>
+    <div class="ui header">
+      Puppet Controls
+    </div>
+    <div class="ui button blue basic" pageaction="runTest">
+      Test
+    </div>
+    
+    <div class="ui button blue basic" pageaction="connect">
+      Connect
+    </div>
+    <div class="ui button blue basic" pageaction="disconnect">
+      Disonnect
+    </div>
 </div>
