Side Panels On Pages and Refresh

--- a/app/pages/CozyGuitar/html/east.html
+++ b/app/pages/CozyGuitar/html/east.html
@@ -1,4 +1,13 @@
 <div class="ui segment basic slim">
-    <h1>How it works</h1>
-    <p>This page is all HTML</p>
+  <div class="ui header">
+    Puppet Controls
+  </div>
+  <div class="ui button blue basic" action="openPage" page="Home">
+    Home
+  </div>
+
+  <div class="ui button blue basic" pageaction="runTest">
+    Test
+  </div>
+
 </div>
