--- a/app/pages/HappyTurtle/html/east.html
+++ b/app/pages/HappyTurtle/html/east.html
@@ -1,15 +1,13 @@
 <div class="ui segment basic slim">
-    <div class="ui header">
-      Puppet Controls
-    </div>
-    <div class="ui button blue basic" pageaction="runTest">
-      Test
-    </div>
-    
-    <div class="ui button blue basic" pageaction="connect">
-      Connect
-    </div>
-    <div class="ui button blue basic" pageaction="disconnect">
-      Disonnect
-    </div>
+  <div class="ui header">
+    Puppet Controls
+  </div>
+  <div class="ui button blue basic" action="openPage" page="Home">
+    Home
+  </div>
+
+  <div class="ui button blue basic" pageaction="runTest">
+    Test
+  </div>
+
 </div>
