--- a/app/pages/HappyTurtle/html/east.html
+++ b/app/pages/HappyTurtle/html/east.html
@@ -6,8 +6,11 @@
     Home
   </div>
 
-  <div class="ui button blue basic" pageaction="runTest">
-    Test
+  <div class="ui button blue basic" pageaction="startDancing">
+    Start
+  </div>
+  <div class="ui button blue basic" pageaction="stopDancing">
+    Stop
   </div>
 
 </div>
