Turle Talks and Dances

--- a/app/pages/HappyTurtle/html/east.html
+++ b/app/pages/HappyTurtle/html/east.html
@@ -2,15 +2,27 @@
   <div class="ui header">
     Puppet Controls
   </div>
-  <div class="ui button blue basic" action="openPage" page="Home">
+  <div class="ui button blue basic orange" action="openPage" page="Home">
     Home
   </div>
 
-  <div class="ui button blue basic" pageaction="startDancing">
+  <div class="ui button blue basic green" pageaction="startMusicResponse">
     Start
   </div>
-  <div class="ui button blue basic" pageaction="stopDancing">
+  <div class="ui button blue basic red" pageaction="stopMusicResponse">
     Stop
   </div>
+  <div class="ui horizontal divider"></div>
+  <div class="ui button blue basic" pageaction="runReaction1">
+    Dance Beaty Music
+  </div>
+  <div class="ui button blue basic" pageaction="runReaction2">
+    Dance Other Music
+  </div>
+    <div class="ui button blue basic" pageaction="toggleMouth">
+    Toggle Mouth
+  </div>
+  
+  
 
 </div>
