--- a/catalog/tpl/EtchyHome.html
+++ b/catalog/tpl/EtchyHome.html
@@ -11,11 +11,14 @@
    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
    id="svg3644"
    sodipodi:docname="etchy-v1-07-from-ink.svg"
-   viewBox="-50 450 1700 1100"
+   viewBox="-70 -10 1284 1586"
    version="1.1"
    inkscape:version="0.92.3 (2405546, 2018-03-11)"
    width="1283.0375"
-   height="1576.588">
+   height="1576.588"
+   inkscape:export-filename="C:\svg\characters\etchy\etchy-v1-07-from-app.png"
+   inkscape:export-xdpi="72.0625"
+   inkscape:export-ydpi="72.0625">
   <metadata
      id="metadata1614">
     <rdf:RDF>
@@ -40,13 +43,13 @@
      pagecolor="#ffffff"
      inkscape:window-height="837"
      inkscape:window-maximized="1"
-     inkscape:zoom="0.08838835"
+     inkscape:zoom="0.3535534"
      inkscape:window-x="1272"
      showgrid="false"
      borderopacity="1.0"
      inkscape:current-layer="layer1"
-     inkscape:cx="-520.24451"
-     inkscape:cy="945.55545"
+     inkscape:cx="910.46829"
+     inkscape:cy="788.29401"
      inkscape:window-width="1440"
      inkscape:pageopacity="0.0"
      inkscape:document-units="mm"
@@ -61,7 +64,9 @@
      transform="translate(-201.20483,0.84329832)">
     <g
        id="leftarm"
-       appuse="charpart">
+       appuse="charpart"
+       transform="rotate(-55,440,218)"
+       >
       <g
          appuse="charpart"
          id="leftlowerarm">
@@ -200,6 +205,7 @@
     </g>
     <g
        id="rightarm"
+       transform="rotate(53,300,218)"
        appuse="charpart">
       <g
          appuse="charpart"
@@ -641,7 +647,7 @@
         </g>
       </g>
       <g
-         id="jaw"
+         id="mouth"
          appuse="charpart">
         <g
            transform="translate(0.32429529,-17.00007)"
@@ -834,3 +840,4 @@
     </g>
   </g>
 </svg>
+
