--- a/catalog/tpl/HomeControlMain.html
+++ b/catalog/tpl/HomeControlMain.html
@@ -2,7 +2,7 @@
   <div class="ui header">Pick a character</div>
   
   <div action="openPage" page="DaftPunkHelmet" class="ui button blue">Daft Punk</div>
-  <div action="openPage" page="CozyGuitar" class="ui button blue">Cozy Guitar</div>
+  <div action="openPage" page="Etchy" class="ui button blue">Etchy</div>
   <div action="openPage" page="HappyTurtle" class="ui button blue">Happy Turtle</div>
   
   <div class="ui horizontal divider"></div>
